--- a/client/pubspec.yaml
+++ b/client/pubspec.yaml
@@ -10,14 +10,15 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-
+  shared_preferences: ^2.2.2
+  dio: ^5.4.1
   cupertino_icons: ^1.0.2
+  encrypt: ^5.0.3
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
   flutter_lints: ^2.0.0
-  dio: 
 
 flutter:
   uses-material-design: true
