--- a/client/pubspec.yaml
+++ b/client/pubspec.yaml
@@ -14,11 +14,15 @@ dependencies:
   dio: ^5.4.1
   cupertino_icons: ^1.0.2
   encrypt: ^5.0.3
+  freezed_annotation: ^2.4.1
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
   flutter_lints: ^2.0.0
+  freezed: ^2.4.7
+  build_runner: ^2.4.8
+  dart_style: 2.3.4
 
 flutter:
   uses-material-design: true
