--- a/server/.env
+++ b/server/.env
@@ -7,3 +7,5 @@ MONGOOSE_USERNAME = "rounakraj2003"
 MONGOOSE_PASSWORD = "bW9gnhQNXMcAil6d"
 
 
+AWS_ACCESS_KEY = "AKIAXOELAGMAIYSVMCK2"
+AWS_SECRET_ACCESS_KEY = "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"
