--- a/client/pubspec.yaml
+++ b/client/pubspec.yaml
@@ -15,6 +15,10 @@ dependencies:
   cupertino_icons: ^1.0.2
   encrypt: ^5.0.3
   freezed_annotation: ^2.4.1
+  injectable: ^2.3.2
+  get_it: ^7.6.7
+  bloc: ^8.1.3
+  flutter_bloc: ^8.1.4
 
 dev_dependencies:
   flutter_test:
@@ -23,6 +27,7 @@ dev_dependencies:
   freezed: ^2.4.7
   build_runner: ^2.4.8
   dart_style: 2.3.4
+  injectable_generator: ^2.4.1
 
 flutter:
   uses-material-design: true
