--- a/server/package.json
+++ b/server/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
+  "type": "module",
   "scripts": {
     "start": "nodemon src/index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -11,13 +12,16 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@aws-sdk/client-bedrock-runtime": "^3.525.0",
     "@google/generative-ai": "^0.2.1",
     "cors": "^2.8.5",
     "dotenv": "^16.4.4",
     "express": "^4.18.2",
     "mongodb": "^6.3.0",
     "mongoose": "^8.2.0",
+    "multer": "^1.4.5-lts.1",
     "nodemon": "^3.0.3",
-    "openai": "^4.28.0"
+    "openai": "^4.28.0",
+    "pdf-to-text": "^0.0.7"
   }
 }
