--- a/client/pubspec.yaml
+++ b/client/pubspec.yaml
@@ -19,6 +19,8 @@ dependencies:
   get_it: ^7.6.7
   bloc: ^8.1.3
   flutter_bloc: ^8.1.4
+  file_picker: ^6.1.1
+  dotted_border: ^2.1.0
 
 dev_dependencies:
   flutter_test:
