--- a/client/pubspec.yaml
+++ b/client/pubspec.yaml
@@ -21,6 +21,8 @@ dependencies:
   flutter_bloc: ^8.1.4
   file_picker: ^6.1.1
   dotted_border: ^2.1.0
+  flutter_easyloading: ^3.0.5
+  loading_animation_widget: ^1.2.0+4
 
 dev_dependencies:
   flutter_test:
