Done...Now Left with server Error Fixing

--- a/client/pubspec.yaml
+++ b/client/pubspec.yaml
@@ -23,6 +23,7 @@ dependencies:
   dotted_border: ^2.1.0
   flutter_easyloading: ^3.0.5
   loading_animation_widget: ^1.2.0+4
+  dartz: ^0.10.1
 
 dev_dependencies:
   flutter_test:
